--- a/index.html
+++ b/index.html
@@ -4,11 +4,13 @@
 <script src="scripts/01-engine/0001-xxm.js"></script>
 <script src="scripts/01-engine/0002-layers.js"></script>
 <script src="scripts/01-engine/0002-setCssVar.js"></script>
+<script src="scripts/01-engine/0002-sprites.js"></script>
 <script src="scripts/01-engine/0002-tilemaps.js"></script>
 <script src="scripts/9999-test.js"></script>
 <link rel="stylesheet" href="styles/animate.css"></link>
 <link rel="stylesheet" href="styles/engine/base.css"></link>
 <link rel="stylesheet" href="styles/engine/layers.css"></link>
+<link rel="stylesheet" href="styles/engine/sprites.css"></link>
 <link rel="stylesheet" href="styles/engine/tilemaps.css"></link>
 <link rel="stylesheet" href="styles/test.css"></link>
 <div class="xxmLayers"></div>
