--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
 <script src="https://code.jquery.com/jquery-2.2.4.js"></script>
 <script src="scripts/01-engine/0001-xxm.js"></script>
 <script src="scripts/01-engine/0002-layers.js"></script>
+<script src="scripts/01-engine/0002-pc.js"></script>
 <script src="scripts/01-engine/0002-setCssVar.js"></script>
 <script src="scripts/01-engine/0002-sprites.js"></script>
 <script src="scripts/01-engine/0002-tilemaps.js"></script>
