--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
 <script src="scripts/01-engine/0001-xxm.js"></script>
 <script src="scripts/01-engine/0002-cssVar.js"></script>
 <script src="scripts/01-engine/0002-db.js"></script>
+<script src="scripts/01-engine/0002-dom-watcher.js"></script>
 <script src="scripts/01-engine/0002-layers.js"></script>
 <script src="scripts/01-engine/0002-overloaded.js"></script>
 <script src="scripts/01-engine/0002-pc.js"></script>
