--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
 <script src="scripts/01-engine/0002-layers.js"></script>
 <script src="scripts/01-engine/0002-overloaded.js"></script>
 <script src="scripts/01-engine/0002-pc.js"></script>
+<script src="scripts/01-engine/0002-viewports.js"></script>
 <script src="scripts/01-engine/0003-sprites.js"></script>
 <script src="scripts/01-engine/0003-tilemaps.js"></script>
 <script src="scripts/02-spritesets/0001-test.js"></script>
@@ -19,5 +20,5 @@
 <link rel="stylesheet" href="styles/engine/layers.css"></link>
 <link rel="stylesheet" href="styles/engine/sprites.css"></link>
 <link rel="stylesheet" href="styles/engine/tilemaps.css"></link>
+<link rel="stylesheet" href="styles/engine/viewports.css"></link>
 <link rel="stylesheet" href="styles/test.css"></link>
-<div class="xxmLayers"></div>
