--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
 <script src="scripts/01-engine/0002-dom-watcher.js"></script>
 <script src="scripts/01-engine/0002-layers.js"></script>
 <script src="scripts/01-engine/0002-overloaded.js"></script>
+<script src="scripts/01-engine/0002-pad.js"></script>
 <script src="scripts/01-engine/0002-pc.js"></script>
 <script src="scripts/01-engine/0002-viewports.js"></script>
 <script src="scripts/01-engine/0003-sprites.js"></script>
