--- a/index.html
+++ b/index.html
@@ -2,6 +2,7 @@
 <meta charset="utf-8">
 <script src="https://code.jquery.com/jquery-2.2.4.js"></script>
 <script src="scripts/01-engine/0001-xxm.js"></script>
+<script src="scripts/01-engine/0002-cssAnimations.js"></script>
 <script src="scripts/01-engine/0002-cssVar.js"></script>
 <script src="scripts/01-engine/0002-db.js"></script>
 <script src="scripts/01-engine/0002-dom-watcher.js"></script>
