--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!doctype html>
 <meta charset="utf-8">
 <script src="https://code.jquery.com/jquery-2.2.4.js"></script>
-<script src="http://cdnjs.cloudflare.com/ajax/libs/q.js/1.4.1/q.min.js"></script>
+<script src="https://cdnjs.cloudflare.com/ajax/libs/q.js/1.4.1/q.min.js"></script>
 <script src="scripts/01-engine/0001-xxm.js"></script>
 <script src="scripts/01-engine/0002-container.js"></script>
 <script src="scripts/01-engine/0002-cssAnimations.js"></script>
