--- a/index.html
+++ b/index.html
@@ -10,10 +10,13 @@
 <script src="scripts/01-engine/0002-dom-watcher.js"></script>
 <script src="scripts/01-engine/0002-events.js"></script>
 <script src="scripts/01-engine/0002-layers.js"></script>
+<script src="scripts/01-engine/0002-messageBox.js"></script>
 <script src="scripts/01-engine/0002-overloaded.js"></script>
 <script src="scripts/01-engine/0002-pad.js"></script>
 <script src="scripts/01-engine/0002-pc.js"></script>
+<script src="scripts/01-engine/0002-typewriter.js"></script>
 <script src="scripts/01-engine/0002-viewports.js"></script>
+<script src="scripts/01-engine/0002-window.js"></script>
 <script src="scripts/01-engine/0003-sprites.js"></script>
 <script src="scripts/01-engine/0003-tilemaps.js"></script>
 <script src="scripts/02-spritesets/0001-test.js"></script>
