--- a/index.html
+++ b/index.html
@@ -26,6 +26,7 @@
 <link rel="stylesheet" href="styles/animate.css"></link>
 <link rel="stylesheet" href="styles/engine/base.css"></link>
 <link rel="stylesheet" href="styles/engine/layers.css"></link>
+<link rel="stylesheet" href="styles/engine/messageBox.css"></link>
 <link rel="stylesheet" href="styles/engine/pixelated.css"></link>
 <link rel="stylesheet" href="styles/engine/sprites.css"></link>
 <link rel="stylesheet" href="styles/engine/tilemaps.css"></link>
