--- a/index.html
+++ b/index.html
@@ -2,27 +2,28 @@
 <meta charset="utf-8">
 <script src="https://code.jquery.com/jquery-2.2.4.js"></script>
 <script src="https://cdnjs.cloudflare.com/ajax/libs/q.js/1.4.1/q.min.js"></script>
-<script src="scripts/01-engine/0001-xxm.js"></script>
-<script src="scripts/01-engine/0002-container.js"></script>
-<script src="scripts/01-engine/0002-cssAnimations.js"></script>
-<script src="scripts/01-engine/0002-cssVar.js"></script>
-<script src="scripts/01-engine/0002-db.js"></script>
-<script src="scripts/01-engine/0002-dom-watcher.js"></script>
-<script src="scripts/01-engine/0002-events.js"></script>
-<script src="scripts/01-engine/0002-layers.js"></script>
-<script src="scripts/01-engine/0002-messageBox.js"></script>
-<script src="scripts/01-engine/0002-overloaded.js"></script>
-<script src="scripts/01-engine/0002-pad.js"></script>
-<script src="scripts/01-engine/0002-pc.js"></script>
-<script src="scripts/01-engine/0002-typewriter.js"></script>
-<script src="scripts/01-engine/0002-viewports.js"></script>
-<script src="scripts/01-engine/0002-window.js"></script>
-<script src="scripts/01-engine/0003-sprites.js"></script>
-<script src="scripts/01-engine/0003-tilemaps.js"></script>
-<script src="scripts/02-spritesets/0001-test.js"></script>
-<script src="scripts/02-spritesets/0002-siren.js"></script>
-<script src="scripts/02-tilesets/0001-test.js"></script>
-<script src="scripts/9999-test.js"></script>
+<script src="lib/01-engine/0001-xxm.js"></script>
+<script src="lib/01-engine/0002-container.js"></script>
+<script src="lib/01-engine/0002-cssAnimations.js"></script>
+<script src="lib/01-engine/0002-cssVar.js"></script>
+<script src="lib/01-engine/0002-db.js"></script>
+<script src="lib/01-engine/0002-dom-watcher.js"></script>
+<script src="lib/01-engine/0002-events.js"></script>
+<script src="lib/01-engine/0002-fullUrl.js"></script>
+<script src="lib/01-engine/0002-layers.js"></script>
+<script src="lib/01-engine/0002-messageBox.js"></script>
+<script src="lib/01-engine/0002-overloaded.js"></script>
+<script src="lib/01-engine/0002-pad.js"></script>
+<script src="lib/01-engine/0002-pc.js"></script>
+<script src="lib/01-engine/0002-typewriter.js"></script>
+<script src="lib/01-engine/0002-viewports.js"></script>
+<script src="lib/01-engine/0002-window.js"></script>
+<script src="lib/01-engine/0003-sprites.js"></script>
+<script src="lib/01-engine/0003-tilemaps.js"></script>
+<script src="lib/02-spritesets/0001-test.js"></script>
+<script src="lib/02-spritesets/0002-siren.js"></script>
+<script src="lib/02-tilesets/0001-test.js"></script>
+<script src="lib/99-coreLoader.js"></script>
 <link rel="stylesheet" href="styles/animate.css"></link>
 <link rel="stylesheet" href="styles/engine/base.css"></link>
 <link rel="stylesheet" href="styles/engine/layers.css"></link>
