--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
 <script src="https://cdnjs.cloudflare.com/ajax/libs/q.js/1.4.1/q.min.js"></script>
 <script src="lib/01-engine/0001-xxm.js"></script>
 <script src="lib/01-engine/0002-container.js"></script>
+<script src="lib/01-engine/0002-coreLoader.js"></script>
 <script src="lib/01-engine/0002-cssAnimations.js"></script>
 <script src="lib/01-engine/0002-cssVar.js"></script>
 <script src="lib/01-engine/0002-db.js"></script>
@@ -23,7 +24,6 @@
 <script src="lib/02-spritesets/0001-test.js"></script>
 <script src="lib/02-spritesets/0002-siren.js"></script>
 <script src="lib/02-tilesets/0001-test.js"></script>
-<script src="lib/99-coreLoader.js"></script>
 <link rel="stylesheet" href="styles/animate.css"></link>
 <link rel="stylesheet" href="styles/engine/base.css"></link>
 <link rel="stylesheet" href="styles/engine/layers.css"></link>
