--- a/index.html
+++ b/index.html
@@ -30,6 +30,7 @@
 <link rel="stylesheet" href="styles/engine/messageBox.css"></link>
 <link rel="stylesheet" href="styles/engine/pixelated.css"></link>
 <link rel="stylesheet" href="styles/engine/sprites.css"></link>
+<link rel="stylesheet" href="styles/engine/sprites.editMode.css"></link>
 <link rel="stylesheet" href="styles/engine/tilemaps.css"></link>
 <link rel="stylesheet" href="styles/engine/viewports.css"></link>
 <link rel="stylesheet" href="styles/engine/windows.css"></link>
