--- a/index.html
+++ b/index.html
@@ -25,6 +25,7 @@
 <script src="lib/02-spritesets/0002-siren.js"></script>
 <script src="lib/02-tilesets/0001-test.js"></script>
 <link rel="stylesheet" href="styles/animate.css"></link>
+<link rel="stylesheet" href="styles/engine/animations.css"></link>
 <link rel="stylesheet" href="styles/engine/base.css"></link>
 <link rel="stylesheet" href="styles/engine/layers.css"></link>
 <link rel="stylesheet" href="styles/engine/messageBox.css"></link>
