--- a/index.html
+++ b/index.html
@@ -24,15 +24,15 @@
 <script src="lib/02-spritesets/0001-test.js"></script>
 <script src="lib/02-spritesets/0002-siren.js"></script>
 <script src="lib/02-tilesets/0001-test.js"></script>
-<link rel="stylesheet" href="styles/animate.css"></link>
-<link rel="stylesheet" href="styles/engine/animations.css"></link>
-<link rel="stylesheet" href="styles/engine/base.css"></link>
-<link rel="stylesheet" href="styles/engine/layers.css"></link>
-<link rel="stylesheet" href="styles/engine/messageBox.css"></link>
-<link rel="stylesheet" href="styles/engine/pixelated.css"></link>
-<link rel="stylesheet" href="styles/engine/sprites.css"></link>
-<link rel="stylesheet" href="styles/engine/sprites.editMode.css"></link>
-<link rel="stylesheet" href="styles/engine/tilemaps.css"></link>
-<link rel="stylesheet" href="styles/engine/viewports.css"></link>
-<link rel="stylesheet" href="styles/engine/windows.css"></link>
-<link rel="stylesheet" href="styles/test.css"></link>
+<link rel="stylesheet" href="style/animate.css"></link>
+<link rel="stylesheet" href="style/engine/animations.css"></link>
+<link rel="stylesheet" href="style/engine/base.css"></link>
+<link rel="stylesheet" href="style/engine/layers.css"></link>
+<link rel="stylesheet" href="style/engine/messageBox.css"></link>
+<link rel="stylesheet" href="style/engine/pixelated.css"></link>
+<link rel="stylesheet" href="style/engine/sprites.css"></link>
+<link rel="stylesheet" href="style/engine/sprites.editMode.css"></link>
+<link rel="stylesheet" href="style/engine/tilemaps.css"></link>
+<link rel="stylesheet" href="style/engine/viewports.css"></link>
+<link rel="stylesheet" href="style/engine/windows.css"></link>
+<link rel="stylesheet" href="style/test.css"></link>
