--- a/index.html
+++ b/index.html
@@ -12,6 +12,7 @@
 <script src="script/lib/01-engine/0002-event.js"></script>
 <script src="script/lib/01-engine/0002-fullUrl.js"></script>
 <script src="script/lib/01-engine/0002-layer.js"></script>
+<script src="script/lib/01-engine/0002-map.js"></script>
 <script src="script/lib/01-engine/0002-messageBox.js"></script>
 <script src="script/lib/01-engine/0002-overloaded.js"></script>
 <script src="script/lib/01-engine/0002-pad.js"></script>
@@ -21,6 +22,8 @@
 <script src="script/lib/01-engine/0002-window.js"></script>
 <script src="script/lib/01-engine/0003-sprite.js"></script>
 <script src="script/lib/01-engine/0003-tilemap.js"></script>
+<script src="script/lib/02-map/0001-test/01-data.js"></script>
+<script src="script/lib/02-map/0001-test/02-script.js"></script>
 <script src="script/lib/02-spriteset/0001-test.js"></script>
 <script src="script/lib/02-spriteset/0002-siren.js"></script>
 <script src="script/lib/02-tileset/0001-test.js"></script>
